--- a/requirements.txt
+++ b/requirements.txt
@@ -160,11 +160,11 @@ s3transfer==0.2.1
 sacremoses==0.0.35
 schema==0.7.1
 scikit-learn==0.21.3
-scipy==1.3.1
+scipy>=1.4.1
 seaborn==0.9.0
 segtok==1.5.7
 Send2Trash==1.5.0
-sentencepiece==0.1.83
+sentencepiece>=0.1.83
 shortuuid==0.5.0
 simplejson==3.17.0
 six==1.12.0
