--- a/luigi.cfg
+++ b/luigi.cfg
@@ -1,24 +1,35 @@
 [globalconfig]
 train_data_path=/home/vageev/toxic_lite/data/train.csv
+test_data_path=/home/vageev/toxic_lite/data/test.csv
+preprocessed_data_folder=/home/vageev/toxic_lite/data/prepared
+featurized_data_folder=/home/vageev/toxic_lite/data/featurized
+model_artefacts_folder=/home/vageev/toxic_lite/model/artefacts
+featurizers_artefacts_folder=/home/vageev/toxic_lite/model/featurizers
+
 
 [PreparationTask]
 input_df_file=/home/vageev/toxic_lite/data/train.csv
-output_df_folder=/home/vageev/toxic_lite/data/prepared/
 
 [TrainTfidfTask]
 input_file_path=/home/vageev/toxic_lite/data/prepared/train_prepared.csv
-artefact_output_path=/home/vageev/toxic_lite/model/featurizers
 
 [TrainMNBTask]
 input_file_path=/home/vageev/toxic_lite/data/prepared/train_prepared.csv
-artefact_output_path=/home/vageev/toxic_lite/model/featurizers
 
 [GenerateMNBFeaturesTask]
 input_file_path=/home/vageev/toxic_lite/data/prepared/train_prepared.csv
-input_artefact_path=/home/vageev/toxic_lite/model/featurizers
-data_output_path=/home/vageev/toxic_lite/data/featurized
 
-[GenerateFeaturesTask]
+[GenerateFeaturesWrapperTask]
 input_file_path=/home/vageev/toxic_lite/data/prepared/train_prepared.csv
-input_artefact_path=/home/vageev/toxic_lite/model/featurizers
-data_output_path=/home/vageev/toxic_lite/data/featurized
+
+[TrainLogRegTask]
+input_file_path=/home/vageev/toxic_lite/data/prepared/train_prepared.csv
+
+[TrainLogRegAllWrapperTask]
+input_file_path=/home/vageev/toxic_lite/data/prepared/train_prepared.csv
+
+[core]
+log_level=INFO
+
+[scheduler]
+state_path=/home/vageev/luigi_files/statefile
