bpemb requirement; luigi state file path

--- a/luigi.cfg
+++ b/luigi.cfg
@@ -1,35 +1,35 @@
 [globalconfig]
-train_data_path=/home/vageev/toxic_lite/data/train.csv
-test_data_path=/home/vageev/toxic_lite/data/test.csv
-preprocessed_data_folder=/home/vageev/toxic_lite/data/prepared
-featurized_data_folder=/home/vageev/toxic_lite/data/featurized
-model_artefacts_folder=/home/vageev/toxic_lite/model/artefacts
-featurizers_artefacts_folder=/home/vageev/toxic_lite/model/featurizers
+train_data_path=./data/train.csv
+test_data_path=./data/test.csv
+preprocessed_data_folder=./data/prepared
+featurized_data_folder=./data/featurized
+model_artefacts_folder=./model/artefacts
+featurizers_artefacts_folder=./model/featurizers
 
 
 [PreparationTask]
-input_df_file=/home/vageev/toxic_lite/data/train.csv
+input_df_file=./data/train.csv
 
 [TrainTfidfTask]
-input_file_path=/home/vageev/toxic_lite/data/prepared/train_prepared.csv
+input_file_path=./data/prepared/train_prepared.csv
 
 [TrainMNBTask]
-input_file_path=/home/vageev/toxic_lite/data/prepared/train_prepared.csv
+input_file_path=./data/prepared/train_prepared.csv
 
 [GenerateMNBFeaturesTask]
-input_file_path=/home/vageev/toxic_lite/data/prepared/train_prepared.csv
+input_file_path=./data/prepared/train_prepared.csv
 
 [GenerateFeaturesWrapperTask]
-input_file_path=/home/vageev/toxic_lite/data/prepared/train_prepared.csv
+input_file_path=./data/prepared/train_prepared.csv
 
 [TrainLogRegTask]
-input_file_path=/home/vageev/toxic_lite/data/prepared/train_prepared.csv
+input_file_path=./data/prepared/train_prepared.csv
 
 [TrainLogRegAllWrapperTask]
-input_file_path=/home/vageev/toxic_lite/data/prepared/train_prepared.csv
+input_file_path=./data/prepared/train_prepared.csv
 
 [core]
 log_level=INFO
 
 [scheduler]
-state_path=/home/vageev/luigi_files/statefile
+state_path=/luigi_files/statefile
