--- a/luigi.cfg
+++ b/luigi.cfg
@@ -1,32 +1,33 @@
 [globalconfig]
-train_data_path=./data/train.csv
-test_data_path=./data/test.csv
-preprocessed_data_folder=./data/prepared
-featurized_data_folder=./data/featurized
-model_artefacts_folder=./model/artefacts
-featurizers_artefacts_folder=./model/featurizers
+
+train_data_path=/toxic_comments/data/train.csv
+test_data_path=/toxic_comments/data/test.csv
+preprocessed_data_folder=/toxic_comments/data/prepared
+featurized_data_folder=/toxic_comments/data/featurized
+model_artefacts_folder=/toxic_comments/model/artefacts
+featurizers_artefacts_folder=/toxic_comments/model/featurizers
 
 
 [PreparationTask]
-input_df_file=./data/train.csv
+input_df_file=/toxic_comments/data/train.csv
 
 [TrainTfidfTask]
-input_file_path=./data/prepared/train_prepared.csv
+input_file_path=/toxic_comments/data/prepared/train_prepared.csv
 
 [TrainMNBTask]
-input_file_path=./data/prepared/train_prepared.csv
+input_file_path=/toxic_comments/data/prepared/train_prepared.csv
 
 [GenerateMNBFeaturesTask]
-input_file_path=./data/prepared/train_prepared.csv
+input_file_path=/toxic_comments/data/prepared/train_prepared.csv
 
 [GenerateFeaturesWrapperTask]
-input_file_path=./data/prepared/train_prepared.csv
+input_file_path=/toxic_comments/data/prepared/train_prepared.csv
 
 [TrainLogRegTask]
-input_file_path=./data/prepared/train_prepared.csv
+input_file_path=/toxic_comments/data/prepared/train_prepared.csv
 
 [TrainLogRegAllWrapperTask]
-input_file_path=./data/prepared/train_prepared.csv
+input_file_path=/toxic_comments/data/prepared/train_prepared.csv
 
 [core]
 log_level=INFO
