fixed ports again

--- a/luigi.cfg
+++ b/luigi.cfg
@@ -34,4 +34,4 @@ log_level=INFO
 
 [scheduler]
 state_path=/luigi_files/statefile
-default-scheduler-host=host.docker.internal
+default-scheduler-host=0.0.0.0
