--- a/luigi.cfg
+++ b/luigi.cfg
@@ -3,6 +3,7 @@
 train_data_path=/toxic_comments/data/train.csv
 prepared_train_data_path=/toxic_comments/data/prepared/train_prepared.csv
 test_data_path=/toxic_comments/data/test.csv
+output_prediction_path=/toxic_comments/data/predictions
 preprocessed_data_folder=/toxic_comments/data/prepared
 featurized_data_folder=/toxic_comments/data/featurized
 model_artefacts_folder=/toxic_comments/model/artefacts
