--- a/Dockerfile_online_predictor
+++ b/Dockerfile_online_predictor
@@ -12,10 +12,14 @@ RUN apt-get update \
 ADD . /toxic_classifier
 ADD . /luigi_files/log_dir/
 WORKDIR /toxic_classifier
+
 ENV PATH="/toxic_classifier:${PATH}"
 ENV MLFLOW_TRACKING_URI http://mlflow_container:5000
-ENV AWS_ACCESS_KEY_ID some_acsess_key_id
-ENV AWS_SECRET_ACCESS_KEY some_secret_access_key
+
+ARG aws_id
+ARG aws_key
+ENV AWS_ACCESS_KEY_ID=$aws_id
+ENV AWS_SECRET_ACCESS_KEY=$aws_key
 
 ENV FLASK_APP="/toxic_classifier/src/online_predictor/app.py"
 ENV FLASK_RUN_PORT=8070
