--- a/Dockerfile_online_predictor
+++ b/Dockerfile_online_predictor
@@ -16,10 +16,11 @@ WORKDIR /toxic_classifier
 ENV PATH="/toxic_classifier:${PATH}"
 ENV MLFLOW_TRACKING_URI http://mlflow_container:5000
 
-ARG aws_id
-ARG aws_key
-ENV AWS_ACCESS_KEY_ID=$aws_id
-ENV AWS_SECRET_ACCESS_KEY=$aws_key
+COPY ~/.aws /.aws
+#ARG aws_id
+#ARG aws_key
+#ENV AWS_ACCESS_KEY_ID=$aws_id
+#ENV AWS_SECRET_ACCESS_KEY=$aws_key
 
 ENV FLASK_APP="/toxic_classifier/src/toxic_comments/online_predictor/app.py"
 ENV FLASK_RUN_PORT=8070
