--- a/Dockerfile_online_predictor
+++ b/Dockerfile_online_predictor
@@ -16,8 +16,7 @@ WORKDIR /toxic_classifier
 ENV PATH="/toxic_classifier:${PATH}"
 ENV MLFLOW_TRACKING_URI http://mlflow_container:5000
 
-ARG home_path=""
-COPY $home_path/.aws /.aws
+COPY .aws /.aws
 ENV FLASK_APP="/toxic_classifier/src/toxic_comments/online_predictor/app.py"
 ENV FLASK_RUN_PORT=8070
 ENV PYTHONPATH="/toxic_classifier"
