--- a/Dockerfile_training
+++ b/Dockerfile_training
@@ -16,13 +16,13 @@ RUN chmod +x train
 RUN chmod +x predict
 ENV PATH="/toxic_classifier:${PATH}"
 ENV MLFLOW_TRACKING_URI http://mlflow_container:5000
-COPY .aws /.aws
+COPY .aws /root/.aws/
 
 RUN pip install .
 
 ENV PYTHONPATH="/toxic_classifier"
 ENV PYTHONPATH="$PYTHONPATH:/toxic_classifier/src"
-ENV LUIGI_CONFIG_PATH='/toxic_classifier/luigi.cfg'
+ENV LUIGI_CONFIG_PATH="/toxic_classifier/luigi.cfg"
 ENV LANG C.UTF-8 
 
 
