--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-luigi=2.8.11
-numpy=1.18.1
-pandas=0.25.3
-mlflow=1.5.0
-scikit-learn=0.22.1
-bpemb=0.3.0
-Flask=1.1.1
+luigi==2.8.11
+numpy==1.18.1
+pandas==0.25.3
+mlflow==1.5.0
+scikit-learn==0.22.1
+bpemb==0.3.0
+Flask==1.1.1
