--- a/luigi.cfg
+++ b/luigi.cfg
@@ -34,6 +34,14 @@ input_file_path=/toxic_classifier/data/prepared/train_prepared.csv
 [core]
 log_level=INFO
 
+[retcode]
+already_running = 10
+missing_data = 20
+not_run = 25
+task_failed = 30
+scheduling_error = 35
+unhandled_exception = 40
+
 [scheduler]
 state_path=/luigi_files/statefile
 default-scheduler-host=0.0.0.0
